--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
 
-<router-outlet></router-outlet>
+<div class="row">
+  <div class="col-8 offset-2">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
+</div>
