--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,35 @@
 <div>
-  <h1 class="color-peche pt-5 text-center">Séréni'chat</h1>
+  <div class="row">
+    <div class="col-2 offset-3">
+      <img src="../../assets/images/logo.png" alt="logo" class="logo">
+    </div>
+    <div class="col-3">
+      <h1 class="color-peche pt-5 text-center">Séréni'chat</h1>
+    </div>
+  </div>
 
-  <div class="navigation-bar row text-center">
-    <div class="col"><div class="typo-link">Accueil</div></div>
-    <div class="col"><div class="typo-link">Nos locaux</div></div>
-    <div class="col"><div class="typo-link">Pour qui ?</div></div>
-    <div class="col"><div class="typo-link">Nos pensionnaires</div></div>
-    <div class="col"><div class="typo-link">Réservation</div></div>
-    <div class="col"><div class="typo-link">Nous aider ?</div></div>
-    <div class="col"><div class="typo-link">Contact</div></div>
+  <div class="navigation-bar row text-center mt-3">
+    <div class="col">
+      <div class="typo-link">Accueil</div>
+    </div>
+    <div class="col">
+      <div class="typo-link">Nos locaux</div>
+    </div>
+    <div class="col">
+      <div class="typo-link">Pour qui ?</div>
+    </div>
+    <div class="col">
+      <div class="typo-link">Nos pensionnaires</div>
+    </div>
+    <div class="col">
+      <div class="typo-link">Réservation</div>
+    </div>
+    <div class="col">
+      <div class="typo-link">Nous aider ?</div>
+    </div>
+    <div class="col">
+      <div class="typo-link">Contact</div>
+    </div>
   </div>
 
   <hr>
