--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,25 +10,25 @@
 
   <div class="navigation-bar row text-center mt-3">
     <div class="col">
-      <div class="typo-link">Accueil</div>
+      <div class="typo-link" routerLink="">Accueil</div>
     </div>
     <div class="col">
-      <div class="typo-link">Nos locaux</div>
+      <div class="typo-link" routerLink="/nos-locaux">Nos locaux</div>
     </div>
     <div class="col">
-      <div class="typo-link">Pour qui ?</div>
+      <div class="typo-link" routerLink="/pour-qui">Pour qui ?</div>
     </div>
     <div class="col">
-      <div class="typo-link">Nos pensionnaires</div>
+      <div class="typo-link" routerLink="/nos-pensionnaires">Nos pensionnaires</div>
     </div>
     <div class="col">
-      <div class="typo-link">Réservation</div>
+      <div class="typo-link" routerLink="/reservation">Réservation</div>
     </div>
     <div class="col">
-      <div class="typo-link">Nous aider ?</div>
+      <div class="typo-link" routerLink="/nous-aider">Nous aider ?</div>
     </div>
     <div class="col">
-      <div class="typo-link">Contact</div>
+      <div class="typo-link" routerLink="/contact">Contact</div>
     </div>
   </div>
 
