Contenu des pages + maj header

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,16 @@
-<p>formulaire + numéro</p>
+
+<div class="text-big">
+  <div class="color-turquoise-foncee text-center mt-5">
+    <div>
+      Pour toute question ou suggestion, laissez nous un message au
+      <span class="color-peche-foncee text-center"> 06.29.41.01.36</span>
+    </div>
+  </div>
+  <div class="color-turquoise-foncee text-center">
+    <div>ou envoyez nous un mail à
+      l'aide du formulaire de contact ci-dessous.</div>
+  </div>
+  <div class="color-turquoise-foncee text-center mt-4">
+    <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" routerLink="/reservation">"Réservation !"</span></div>
+  </div>
+</div>
