--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -1,1 +1,44 @@
-<p>photos + descriptions</p>
+<div>
+  <div class="row mt-5">
+    <div class="col-4 offset-1">
+      <div class="jumbo">
+        <div class="jumbo-title">
+          D'où viennent nos pensionnaires ?
+        </div>
+        <div class="jumbo-body">
+          <div class="color-turquoise-foncee text-center">
+            <div>Les chats et lapins accueillis par Séréni'chat viennent d'associations, refuges, familles d'accueil...
+              Certains ont du mal à trouver des adoptants notamment parce qu'ils sont trop discrets, différents ou trop
+              âgés. N'hésitez pas à faire leur connaissance !
+            </div>
+            <div class="color-peche-foncee">Nos associations partenaires pour les chats : Association Alerte SOS,
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-4 offset-2">
+      <div class="jumbo">
+        <div class="jumbo-title">
+          Adoption
+        </div>
+        <div class="jumbo-body">
+          <div class="color-turquoise-foncee text-center">
+            <div>Un coup de cœur ?</div>
+            <div>Certains de nos pensionnaires félins sont adoptables !</div>
+            <div>Contactez-nous afin de discuter des conditions d'adoption et être redirigé vers nos associations
+              partenaires.</div>
+            <div class="color-peche-foncee mt-3 text-left">Important</div>
+            <div class="text-left">Comme nous sommes famille d'accueil, nos chats ne sont pas toujours les mêmes ! Nous essayons de mettre à jour notre site régulièrement mais il est possible que nous n'ayons pas encore eu le temps de changer les photos.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div class="row text-center pb-5 mt-4">
+  <div class="col-2 offset-5">
+    Photos chats et lapins actuels
+  </div>
+</div>
