--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -1,1 +1,50 @@
-<p>explications</p>
+<div class="text-big">
+  <div class="color-turquoise-foncee text-center mt-5">
+    <div>Si Séréni'chat est payant, c'est pour nous aider à louer notre local et à fournir nourriture et litière à nos
+      protégés.
+    </div>
+  </div>
+  <div class="color-peche-foncee text-center">
+    <div>Vous voulez nous soutenir autrement ?</div>
+    <div>Il y a 2 façons de le faire !</div>
+  </div>
+</div>
+<div class="row mt-4">
+  <div class="col-4 offset-1">
+    <div class="jumbo">
+      <div class="jumbo-title">
+        Faire un don matériel
+      </div>
+      <div class="jumbo-body">
+        <div class="color-turquoise-foncee text-center">
+          <div>Vous pouvez nous amener
+          </div>
+          <div class="text-left">
+            <div>- pour les chats : des croquettes pour chats stérilisés, de la litière agglomérante, des petites
+              friandises pour
+              chat
+            </div>
+            <div>-pour les lapins : du foin, de la litière végétale, des légumes frais (carottes, chou de bruxelles,
+              épinard,
+              endives)
+            </div>
+            <div>- autre chose qui leur ferait plaisir !
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-4 offset-2">
+    <div class="jumbo">
+      <div class="jumbo-title">
+        Faire un don financier
+      </div>
+      <div class="jumbo-body">
+        <div class="color-turquoise-foncee text-center">
+          <div>Vous pouvez participer à notre <a href="https://www.leetchi.com/c/aide-au-fonctionnement-serenichat" target="_blank">cagnotte en ligne</a></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
