--- a/src/assets/style/_colors.scss
+++ b/src/assets/style/_colors.scss
@@ -1,8 +1,8 @@
 
 $peche: rgba(247, 198, 169, 1);
+$peche-foncee: #e65f0e;
 
 $turquoise: rgba(178, 222, 214, 1);
-
-$turquoise-fonce: #409C8C;
+$turquoise-foncee: #409C8C;
 
 $marron: #4D2005;
