--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -1,1 +1,24 @@
-<p>photos + adresse</p>
+<div class="text-big">
+  <div class="color-peche-foncee text-center mt-5">
+    <div>Les locaux</div>
+  </div>
+  <div class="color-turquoise-foncee text-center">
+    <div>Séréni'chat a fait son nid au 15, Rue Desargues 75011 Paris.</div>
+    <div>-Le local est accessible aux personnes à mobilité réduite-</div>
+  </div>
+  <div class="color-peche-foncee text-center mt-4">
+    <div>Accès transports en commun</div>
+  </div>
+  <div class="color-turquoise-foncee text-center">
+    <div>Métro : Couronnes (ligne 2) ou Belleville (lignes 2 et 11)</div>
+    <div>Bus : Maison des Metallos (bus 96), Couronnes (bus 96) ou Ramponeau (bus 20 et 71)</div>
+    <div>En voiture : Places pour personnes en situation de handicap à proximité</div>
+  </div>
+  <div>
+    <div class="row text-center pb-5 mt-4">
+      <div class="col-2 offset-5">
+        photos local & salle ?
+      </div>
+    </div>
+  </div>
+</div>
