--- a/src/assets/style/_typo.scss
+++ b/src/assets/style/_typo.scss
@@ -4,10 +4,29 @@
   color: $peche;
 }
 
+.color-peche-foncee {
+  color: $peche-foncee;
+}
+
+.color-turquoise-foncee {
+  color: $turquoise-foncee;
+}
+
+.text-big {
+  font-size: 1.25rem;
+}
+.text-vbig {
+  font-size: 4rem;
+}
 .typo-link {
   cursor: pointer;
   color: $marron;
   &:hover {
-    color: $turquoise-fonce;
+    color: $turquoise-foncee;
   }
 }
+
+.typo-link.selected {
+  color: $turquoise-foncee;
+}
+
