Contenu des pages + maj header2

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -65,7 +65,7 @@
             <li>MDPH</li>
           </ul>
           <div class="color-peche-foncee text-center mt-3">
-            Et bien d'autres encore, contactez-nous !</div>
+            Et bien d'autres encore, <span class="typo-link" routerLink="/contact">contactez-nous !</span></div>
         </div>
       </div>
     </div>
