--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,6 +11,6 @@
       l'aide du formulaire de contact ci-dessous.</div>
   </div>
   <div class="color-turquoise-foncee text-center mt-4">
-    <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" routerLink="/reservation">"Réservation !"</span></div>
+    <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" routerLink="/reservation">Réservation !</span></div>
   </div>
 </div>
