footer, texte, images

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -50,6 +50,7 @@
 
   <div class="row mt-5">
     <div class="col-5 offset-4">
+      <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.png" alt="cat logo" class="logo-cat">
       <div class="jumbo">
         <div class="jumbo-title">
           Séréni'Chat s'adresse aux :
