--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,8 +7,9 @@
     </div>
   </div>
   <div class="color-turquoise-foncee text-center">
-    <div>ou envoyez nous un mail à
-      l'aide du formulaire de contact ci-dessous.</div>
+    <div>ou envoyez nous un mail à l'adresse
+      <span class="text-center"><a href="mailto:contact.serenichat@gmail.com">contact.serenichat@gmail.com</a></span>
+    </div>
   </div>
   <div class="color-turquoise-foncee text-center mt-4">
     <div>Pour réserver un créneau, rendez-vous dans la rubrique <span class="typo-link" routerLink="/reservation">Réservation !</span></div>
