--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -10,8 +10,8 @@
     <div>Accès transports en commun</div>
   </div>
   <div class="color-turquoise-foncee text-center">
-    <div>Métro : Couronnes (ligne 2) ou Belleville (lignes 2 et 11)</div>
-    <div>Bus : Maison des Metallos (bus 96), Couronnes (bus 96) ou Ramponeau (bus 20 et 71)</div>
+    <div>En métro : Couronnes (ligne 2) ou Belleville (lignes 2 et 11)</div>
+    <div>En bus : Maison des Metallos (bus 96), Couronnes (bus 96) ou Ramponeau (bus 20 et 71)</div>
     <div>En voiture : Places pour personnes en situation de handicap à proximité</div>
   </div>
   <div>
