--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -21,12 +21,10 @@
           </div>
           <div class="text-left">
             <div>- pour les chats : des croquettes pour chats stérilisés, de la litière agglomérante, des petites
-              friandises pour
-              chat
+              friandises pour chat, des jouets
             </div>
             <div>-pour les lapins : du foin, de la litière végétale, des légumes frais (carottes, chou de bruxelles,
-              épinard,
-              endives)
+              épinard, endives)
             </div>
             <div>- autre chose qui leur ferait plaisir !
             </div>
@@ -35,7 +33,10 @@
       </div>
     </div>
   </div>
-  <div class="col-4 offset-2">
+  <div class="col-2 text-center mt-5">
+      <img src="../../assets/images/main.png" alt="main logo" class="logo-main">
+  </div>
+  <div class="col-4">
     <div class="jumbo">
       <div class="jumbo-title">
         Faire un don financier
