--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
-<div class="row">
+<div>
   <div class="col-8 offset-2">
     <app-header></app-header>
     <router-outlet></router-outlet>
+    <app-footer></app-footer>
   </div>
 </div>
