--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <div>
   <div class="row">
     <div class="col-2 offset-3">
-      <img src="../../assets/images/logo.png" alt="logo" class="logo">
+      <img routerLink="" src="../../assets/images/logo.png" alt="logo" class="logo">
     </div>
     <div class="col-3">
-      <h1 class="color-peche pt-5 text-center text-vbig">Séréni'chat</h1>
+      <h1 routerLink="" class="color-peche pt-5 text-center text-vbig typo-westhouse">Séréni'chat</h1>
     </div>
   </div>
 
