--- a/src/assets/style/_box.scss
+++ b/src/assets/style/_box.scss
@@ -8,10 +8,9 @@
   color: $peche-foncee;
   text-align: center;
   padding: 1rem;
-  font-size: 2rem;
+  @extend .text-big;
 }
 
 .jumbo-body {
   padding: 2rem;
-  font-size: 1.25rem;
 }
