--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,74 +1,72 @@
 <div>
 
-  <div class="row text-center pb-5">
-    <div class="col-2 offset-5">
-      photos local & salle
-    </div>
+  <div class="row text-center pb-5 justify-content-center mt-5">
+    <img class="img-rounded-corners local" src="../../assets/images/local.jpg" alt="local">
   </div>
 
-  <div class="row">
-    <div class="col-4 offset-1">
-      <div class="jumbo">
-        <div class="jumbo-title">
-          Le concept
-        </div>
-        <div class="jumbo-body">
-          <div class="color-turquoise-foncee text-center">
-            <div>Séréni'chat est un lieu dédié à l'aide aux enfants neuro-atypiques ou handicapés moteurs par le contact
-              avec l'animal. Notre local comporte également une salle multi-sensorielle.
-            </div>
-            <div>Nous recueillons des chats et lapins en attente d'adoption, et ouvrons nos portes aux enfants en
-              ressentant le besoin afin qu'ils profitent de quelques heures en compagnie de nos petits protégés.
-            </div>
-          </div>
-        </div>
+<div class="row">
+  <div class="col-4 offset-1">
+    <div class="jumbo">
+      <div class="jumbo-title">
+        Le concept
       </div>
-    </div>
-    <div class="col-4 offset-2">
-      <div class="jumbo">
-        <div class="jumbo-title">
-          Qui gère Séréni'chat ?
-        </div>
-        <div class="jumbo-body">
-          <div class="color-turquoise-foncee text-left">
-            <div class="color-peche-foncee">Noémie, fondatrice :</div>
-            <div class="color-turquoise-foncee">
-              <div>5 ans d'enseignement</div>
-              <div>Formation Sésame Autisme</div>
-              <div>Intervenante classe ULIS</div>
-              <div>Certificat de capacité animaux domestiques</div>
-              <div>Formation aux premiers secours.</div>
-              <div class="color-peche-foncee text-center mt-3">
-                Vous êtes entre de bonnes mains !
-              </div>
-            </div>
+      <div class="jumbo-body">
+        <div class="color-turquoise-foncee text-center">
+          <div>Séréni'chat est un lieu dédié à l'aide aux enfants neuro-atypiques ou handicapés moteurs par le contact
+            avec l'animal. Notre local comporte également une salle multi-sensorielle.
+          </div>
+          <div>Nous recueillons des chats et lapins en attente d'adoption, et ouvrons nos portes aux enfants en
+            ressentant le besoin afin qu'ils profitent de quelques heures en compagnie de nos petits protégés.
           </div>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="row mt-5">
-    <div class="col-5 offset-4">
-      <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.png" alt="cat logo" class="logo-cat">
-      <div class="jumbo">
-        <div class="jumbo-title">
-          Séréni'Chat s'adresse aux :
-        </div>
-        <div class="jumbo-body">
-          <ul class="color-turquoise-foncee">
-            <li>Enfants neuro-atypiques</li>
-            <li>Enfants handicapés moteurs</li>
-            <li>Enfants souffrant d'anxiété</li>
-            <li>Associations TSA/trisomie/TED...</li>
-            <li>Classes ULIS (maximum 2 enfants par séance)</li>
-            <li>Hôpitaux de jour pédiatriques</li>
-            <li>MDPH</li>
-          </ul>
-          <div class="color-peche-foncee text-center mt-3">
-            Et bien d'autres encore, <span class="typo-link" routerLink="/contact">contactez-nous !</span></div>
+  <div class="col-4 offset-2">
+    <div class="jumbo">
+      <div class="jumbo-title">
+        Qui gère Séréni'chat ?
+      </div>
+      <div class="jumbo-body">
+        <div class="color-turquoise-foncee text-left">
+          <div class="color-peche-foncee">Noémie, fondatrice :</div>
+          <div class="color-turquoise-foncee">
+            <div>5 ans d'enseignement</div>
+            <div>Formation Sésame Autisme</div>
+            <div>Intervenante classe ULIS</div>
+            <div>Certificat de capacité animaux domestiques</div>
+            <div>Formation aux premiers secours.</div>
+            <div class="color-peche-foncee text-center mt-3">
+              Vous êtes entre de bonnes mains !
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+
+<div class="row mt-5">
+  <div class="col-5 offset-4">
+    <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.png" alt="cat logo" class="logo-cat">
+    <div class="jumbo">
+      <div class="jumbo-title">
+        Séréni'Chat s'adresse aux :
+      </div>
+      <div class="jumbo-body">
+        <ul class="color-turquoise-foncee">
+          <li>Enfants neuro-atypiques</li>
+          <li>Enfants handicapés moteurs</li>
+          <li>Enfants souffrant d'anxiété</li>
+          <li>Associations TSA/trisomie/TED...</li>
+          <li>Classes ULIS (maximum 2 enfants par séance)</li>
+          <li>Hôpitaux de jour pédiatriques</li>
+          <li>MDPH</li>
+        </ul>
+        <div class="color-peche-foncee text-center mt-3">
+          Et bien d'autres encore, <span class="typo-link" routerLink="/contact">contactez-nous !</span></div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
