--- a/src/app/nos-locaux/nos-locaux.component.html
+++ b/src/app/nos-locaux/nos-locaux.component.html
@@ -15,10 +15,9 @@
     <div>En voiture : Places pour personnes en situation de handicap à proximité</div>
   </div>
   <div>
-    <div class="row text-center pb-5 mt-4">
-      <div class="col-2 offset-5">
-        photos local & salle ?
+      <div class="row text-center pb-5 justify-content-center mt-5">
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/local.jpg" alt="local"></div>
+        <div class="col"><img class="img-rounded-corners local2" src="../../assets/images/local.jpg" alt="local"></div>
       </div>
-    </div>
   </div>
 </div>
