--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -7,11 +7,11 @@
         </div>
         <div class="jumbo-body">
           <div class="color-turquoise-foncee text-center">
-            <div>Les chats et lapins accueillis par Séréni'chat viennent d'associations, refuges, familles d'accueil...
+            <div class="mb-4">Les chats et lapins accueillis par Séréni'chat viennent d'associations, refuges, familles d'accueil...
               Certains ont du mal à trouver des adoptants notamment parce qu'ils sont trop discrets, différents ou trop
               âgés. N'hésitez pas à faire leur connaissance !
             </div>
-            <div class="color-peche-foncee">Nos associations partenaires pour les chats : Association Alerte SOS,
+            <div class="color-peche-foncee mb-3">Nos associations partenaires pour les chats : Association Alerte SOS, les Copains d'Akina, Chat d'oc
             </div>
           </div>
         </div>
@@ -24,8 +24,7 @@
         </div>
         <div class="jumbo-body">
           <div class="color-turquoise-foncee text-center">
-            <div>Un coup de cœur ?</div>
-            <div>Certains de nos pensionnaires félins sont adoptables !</div>
+            <div>Un coup de cœur ? Certains de nos pensionnaires félins sont adoptables !</div>
             <div>Contactez-nous afin de discuter des conditions d'adoption et être redirigé vers nos associations
               partenaires.</div>
             <div class="color-peche-foncee mt-3 text-left">Important</div>
@@ -37,8 +36,6 @@
     </div>
   </div>
 
-<div class="row text-center pb-5 mt-4">
-  <div class="col-2 offset-5">
-    Photos chats et lapins actuels
-  </div>
+<div class="row text-center mt-3">
+  <img class="img-rounded-corners cat" src="../../assets/images/Priam.jpg" alt="cats">
 </div>
