--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -5,7 +5,7 @@
   </div>
 
 <div class="row">
-  <div class="col-4 offset-1">
+  <div class="col pb-3">
     <div class="jumbo">
       <div class="jumbo-title">
         Le concept
@@ -22,7 +22,7 @@
       </div>
     </div>
   </div>
-  <div class="col-4 offset-2">
+  <div class="col">
     <div class="jumbo">
       <div class="jumbo-title">
         Qui gère Séréni'chat ?
@@ -46,8 +46,8 @@
   </div>
 </div>
 
-<div class="row mt-5">
-  <div class="col-5 offset-4">
+<div class="row mt-5 justify-content-center">
+  <div class="col-11">
     <img src="../../assets/images/free-cat-clipart-silhouette-vector-images.png" alt="cat logo" class="logo-cat">
     <div class="jumbo">
       <div class="jumbo-title">
