--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div class="color-turquoise-foncee text-center">
-    <div>ou envoyez nous un mail à l'adresse
+    <div style="overflow-wrap: break-word;">ou envoyez nous un mail à l'adresse
       <span class="text-center"><a href="mailto:contact.serenichat@gmail.com">contact.serenichat@gmail.com</a></span>
     </div>
   </div>
