--- a/src/app/nos-pensionnaires/nos-pensionnaires.component.html
+++ b/src/app/nos-pensionnaires/nos-pensionnaires.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="row mt-5">
-    <div class="col-4 offset-1">
+    <div class="col pb-3">
       <div class="jumbo">
         <div class="jumbo-title">
           D'où viennent nos pensionnaires ?
@@ -17,14 +17,14 @@
         </div>
       </div>
     </div>
-    <div class="col-4 offset-2">
+    <div class="col">
       <div class="jumbo">
         <div class="jumbo-title">
           Adoption
         </div>
         <div class="jumbo-body">
           <div class="color-turquoise-foncee text-center">
-            <div>Un coup de cœur ? Certains de nos pensionnaires félins sont adoptables !</div>
+            <div>Un coup de cœur ? <br>Certains de nos pensionnaires félins sont adoptables !</div>
             <div>Contactez-nous afin de discuter des conditions d'adoption et être redirigé vers nos associations
               partenaires.</div>
             <div class="color-peche-foncee mt-3 text-left">Important</div>
