--- a/src/app/nous-aider/nous-aider.component.html
+++ b/src/app/nous-aider/nous-aider.component.html
@@ -5,12 +5,11 @@
     </div>
   </div>
   <div class="color-peche-foncee text-center">
-    <div>Vous voulez nous soutenir autrement ?</div>
-    <div>Il y a 2 façons de le faire !</div>
+    <div>Si vous voulez nous soutenir autrement, il y a 2 façons de le faire !</div>
   </div>
 </div>
 <div class="row mt-4">
-  <div class="col-4 offset-1">
+  <div class="col">
     <div class="jumbo">
       <div class="jumbo-title">
         Faire un don matériel
@@ -33,10 +32,10 @@
       </div>
     </div>
   </div>
-  <div class="col-2 text-center mt-5">
+  <div class="col text-center mt-5 mb-5">
       <img src="../../assets/images/main.png" alt="main logo" class="logo-main">
   </div>
-  <div class="col-4">
+  <div class="col">
     <div class="jumbo">
       <div class="jumbo-title">
         Faire un don financier
