--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <div>
-  <div class="row">
-    <div class="col-2 offset-3">
+  <div class="row justify-content-around mh-100">
+    <div class="col text-center">
       <img routerLink="" src="../../assets/images/logo.png" alt="logo" class="logo">
     </div>
-    <div class="col-3">
-      <h1 routerLink="" class="color-peche pt-5 text-center text-vbig typo-westhouse">Séréni'chat</h1>
+    <div class="col title">
+      <h1 routerLink="" class="color-peche text-center text-vbig typo-westhouse">Séréni'chat</h1>
     </div>
   </div>
 
@@ -22,7 +22,7 @@
       <div [class]="getLinkClass('/reservation')" routerLink="/reservation">Réservation</div>
     </div>
     <div class="col">
-      <div [class]="getLinkClass('/nous-aider')" routerLink="/nous-aider">Nous aider ?</div>
+      <div [class]="getLinkClass('/nous-aider')" routerLink="/nous-aider">Nous aider</div>
     </div>
     <div class="col">
       <div [class]="getLinkClass('/contact')" routerLink="/contact">Contact</div>
