--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -10,8 +10,6 @@
   </div>
 </div>
 
-<div (click)="debug()">debug</div>
-
 <div class="row justify-content-center">
   <div class="col-1">
     <mat-icon (click)="addDays(-7)">keyboard_arrow_left</mat-icon>
@@ -20,8 +18,6 @@
   <mat-icon (click)="addDays(7)">keyboard_arrow_right</mat-icon>  
   </div>
 </div>
-
-
 
 <table>
   <thead>
@@ -35,8 +31,9 @@
   </tr>
   </thead>
   <tbody>
+  <ng-container *ngFor="let seance of seances">
   <tr>
-    <td class="hour" rowspan="4"><span>1:00</span></td>
+    <td class="hour" rowspan="4"><span>{{ seance.libelle }}</span></td>
     <td></td>
     <td></td>
     <td></td>
@@ -72,5 +69,6 @@
     <td></td>
     <td></td>
   </tr>
+</ng-container>
   </tbody>
 </table>
